--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,12 @@
     <string name="msg_time">12:33 pm</string>
     <string name="sender_text">Sended message</string>
     <string name="msg_time_sender">09:33 am</string>
+    <string name="my_profile">My profile</string>
+    <string name="setting">setting</string>
+    <string name="settings">Settings</string>
+    <string name="navigation_drawer_open">navigation_drawer_open</string>
+    <string name="navigation_drawer_close">navigation_drawer_close</string>
+    <string name="logOut">log out</string>
 
 
 </resources>
