--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="next">next</string>
     <string name="skip"><u>Skip for now</u>.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="time_voice">2:00</string>
 
 
 </resources>
