--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,14 @@
     <string name="skip"><u>Skip for now</u>.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="time_voice">2:00</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="email">Your Email</string>
+    <string name="password">Your Password</string>
+    <string name="phone_number">Your Phone Number</string>
+    <string name="city">City</string>
+    <string name="country">Country</string>
 
 
 </resources>
