--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,8 @@
     <string name="phone_number">Your Phone Number</string>
     <string name="city">City</string>
     <string name="country">Country</string>
+    <string name="delete">deletle</string>
+    <string name="play">play</string>
 
 
 </resources>
